--- a/PushNotificationClient/PushNotificationClient/Shared/MainLayout.razor
+++ b/PushNotificationClient/PushNotificationClient/Shared/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 @inject IJSRuntime JSRuntime
 @inject HttpClient Http
+@inject Blazored.LocalStorage.ILocalStorageService localStorage
 
 @using PushNotificationClient.Class
 
@@ -25,6 +26,16 @@
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         await base.OnAfterRenderAsync(firstRender);
+
+
+        var IsOnLine = await localStorage.GetItemAsync<bool>("ConnectionStatus");
+
+        if (IsOnLine)
+        {
+            await GetToken();
+        }
+
+
         if (firstRender)
             await RequestNotificationSubscriptionAsync();
 
@@ -41,11 +52,39 @@
 
     public async Task SubscribeToNotifications(NotificationSubscription subscription)
     {
-       
-        var response = await Http.PostAsJsonAsync("api/NotificationSubscribe", subscription);
-        //response.EnsureSuccessStatusCode();
-        
+        var IsOnLine = await localStorage.GetItemAsync<bool>("ConnectionStatus");
+
+        if (IsOnLine)
+        {
+            var JWToken = await localStorage.GetItemAsync<string>("JWT");
+
+            Http.DefaultRequestHeaders.Add("Authorization", "Bearer " + JWToken);
+            var response = await Http.PostAsJsonAsync("api/NotificationSubscribe", subscription);
+            //response.EnsureSuccessStatusCode();
+
+        }
+
+
     }
 
-    
+    public async Task GetToken()
+    {
+        var JWToken = await localStorage.GetItemAsync<string>("JWT");
+
+        if (JWToken == null)
+        {
+            UserInfo oUser = new UserInfo();
+
+            oUser.Email = "sss@dd.com";
+            oUser.Password = "eeee";
+
+            var response = await Http.PostAsJsonAsync("api/Token", oUser);
+            var message = response.Content.ReadAsStringAsync();
+
+            await localStorage.SetItemAsync("JWT", message.Result);
+        }
+
+    }
+
+
 }
