--- a/PushNotificationClient/PushNotificationClient/Shared/MainLayout.razor
+++ b/PushNotificationClient/PushNotificationClient/Shared/MainLayout.razor
@@ -59,7 +59,7 @@
             var JWToken = await localStorage.GetItemAsync<string>("JWT");
 
             Http.DefaultRequestHeaders.Add("Authorization", "Bearer " + JWToken);
-            var response = await Http.PostAsJsonAsync("api/NotificationSubscribe", subscription);
+            var response = await Http.PostAsJsonAsync("api/v1/Notification/NotificationSubscribe", subscription);
             //response.EnsureSuccessStatusCode();
 
         }
@@ -70,6 +70,7 @@
     public async Task GetToken()
     {
         var JWToken = await localStorage.GetItemAsync<string>("JWT");
+        JWToken = null;
 
         if (JWToken == null)
         {
@@ -78,7 +79,8 @@
             oUser.Email = "sss@dd.com";
             oUser.Password = "eeee";
 
-            var response = await Http.PostAsJsonAsync("api/Token", oUser);
+            //Http.DefaultRequestHeaders.Add("x-api-version", "1.0");
+            var response = await Http.PostAsJsonAsync("api/v1/Token/Token", oUser);
             var message = response.Content.ReadAsStringAsync();
 
             await localStorage.SetItemAsync("JWT", message.Result);
