--- a/PushNotificationClient/PushNotificationClient/Shared/MainLayout.razor
+++ b/PushNotificationClient/PushNotificationClient/Shared/MainLayout.razor
@@ -70,7 +70,7 @@
     public async Task GetToken()
     {
         var JWToken = await localStorage.GetItemAsync<string>("JWT");
-        JWToken = null;
+        //JWToken = null;
 
         if (JWToken == null)
         {
